Fixed scrollbar display and default avatar on comments

--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,14 @@
     font-size: theme(fontSize.xl);
   }
 }
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+}
